--- a/style.css
+++ b/style.css
@@ -80,9 +80,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
-button:hover {
-  transform: scale(1.05);
-}
+
 /* UI Elements */
 button {
   display: inline-block;
@@ -94,8 +92,12 @@ button {
   text-decoration: none;
   background-color: var(--default-accent);
   color: var(--default-accent-text);
+  transition: 0.3s ease-out;
 }
 
+button:hover {
+  transform: scale(1.05);
+}
 .dark_button {
   background-color: var(--default-accent);
   color: var(--default-accent-text);
